Make 80%of ConnectorTest